ui/src/app/view/timestamp-table/timestamp-table.component.scss
@import "DCSA-Theme";

:host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
  position: -webkit-sticky;
  position: sticky;
  top: 47px;
}

::ng-deep .p-datatable-header {
  padding: 7px 0px 5px 0px !important;
}

.globalSearch {
  float: right;
  height: 40px;
  padding: 3px 5px 3px 0px;

  i {
    padding-top: 3px !important;
  }
}

tr{
  height: 59px;
}

.invisible{
  height:1px;
}

.rowDetails {
  color: $darkGrey;
  text-transform: capitalize;
  font-size: 12px;
}


.dummyContent{
   width: 98vw;
   margin-top: 100px;
   text-align: center;
   font-size: 16pt;
   color: $darkGrey;
   font-family: Tahoma, sans-serif;


}

.timestampContent{
  font-size:$tableSize;
  z-index: 1;
  text-shadow: none;

  &__buttons {
    margin: 5px 10px 0px 0px;  
    float: right;
  }
}

.tableHeader {
  display: flex;
  flex-direction: row;
  float: right;
  padding: 0px 0px !important;
  max-width: 120px !important;

  &__buttons {
    margin: 5px 10px 0px 0px;  
  }

  &__add_button {
    height: 25px;
    width: 25px;
  }

}

.unreadTimestamp{
  //background-color: #F3E300;
  text-shadow: 1px 1px 2px #009093;
  color:#1E1E2C;


}

.disabledRow{
  background-color: #d7d7d7;
  color: #929292;
  text-shadow: none;
}

.ingoing{
  background-color: #009093;
  transform: scale(0.25);
}

.outgoingDelivered{
  background-color: rgb(116, 116, 116);
  transform: scale(0.25);
}

.outgoingPending{
  background-color: rgb(240, 227, 46);
  transform: scale(0.25);
}

.outgoingAttempted{
  background-color:rgb(223, 83, 27);
  transform: scale(0.25);
}

.obsoleteTimestamp{
  opacity: 35%;
}

